Bug 1114345 - Don't pop up slow script dialog after waking up laptop (r=bholley)